Minor footie issue

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <p>
     This is a modified version of the <a href="http://gabrielecirulli.github.io/2048/" target="_blank">original game</a> created by Gabriele Cirulli.
     </p>
-    <p id="footie"> Recast with ❤ by <a href="https://github.com/TheDreamSaver">The Dream Saver</a></p>
+    <p id="footie"> Recast with ❤ by <a href="https://github.com/TheDreamSaver/">The Dream Saver</a></p>
   </div>
 
   <script src="js/bind_polyfill.js"></script>
